--- a/lib/wpfui/src/Wpf.Ui.ToastNotifications/Wpf.Ui.ToastNotifications.csproj
+++ b/lib/wpfui/src/Wpf.Ui.ToastNotifications/Wpf.Ui.ToastNotifications.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageId>WPF-UI.ToastNotifications</PackageId>
-    <TargetFrameworks>net462net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net462;net8.0-windows</TargetFrameworks>
     <Description>Native tast notification support for WPF using the WPF UI library.</Description>
     <CommonTags>$(CommonTags);toast;notifications</CommonTags>
     <UseWPF>true</UseWPF>
