- Modernise the `InternalsVisibleTo` setup `PSADT` and `PSADT.UserInterface` projects.

--- a/src/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -71,6 +71,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="PSADT.UserInterface.TestHarness" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Dialogs\Classic\PSADT.UserInterface.Dialogs.Classic.AbortableDialog.cs">
       <SubType>Form</SubType>
     </Compile>
