- Disable document comment generation from Wpf.Ui.

--- a/lib/wpfui/src/Wpf.Ui.Tray/Wpf.Ui.Tray.csproj
+++ b/lib/wpfui/src/Wpf.Ui.Tray/Wpf.Ui.Tray.csproj
@@ -8,6 +8,7 @@
     <UseWPF>true</UseWPF>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
