--- a/lib/wpfui/src/Wpf.Ui/Wpf.Ui.csproj
+++ b/lib/wpfui/src/Wpf.Ui/Wpf.Ui.csproj
@@ -7,6 +7,7 @@
     <Description>WPF UI provides the Fluent experience in your known and loved WPF framework. Intuitive design, themes, navigation and new immersive controls. All natively and effortlessly.</Description>
     <UseWPF>true</UseWPF>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
