- Disable iNKORE document comment generation.

--- a/lib/iNKORE.UI.WPF.Modern/source/iNKORE.UI.WPF.Modern/iNKORE.UI.WPF.Modern.csproj
+++ b/lib/iNKORE.UI.WPF.Modern/source/iNKORE.UI.WPF.Modern/iNKORE.UI.WPF.Modern.csproj
@@ -11,7 +11,7 @@
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\..\assets\others\iNKORE.Pulic.snk</AssemblyOriginatorKeyFile>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <GenerateDocumentationFile>false</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);CS1591;1701;1702;CA1416;CS8632</NoWarn>
 	</PropertyGroup>
 
