- Should have known that .NET Framework wouldn't like portable PDB formats...

--- a/src/PSADT/PSADT.ClientServer.Client.Launcher/PSADT.ClientServer.Client.Launcher.csproj
+++ b/src/PSADT/PSADT.ClientServer.Client.Launcher/PSADT.ClientServer.Client.Launcher.csproj
@@ -29,7 +29,7 @@
     <StartupObject>PSADT.ClientServer.Launcher.Program</StartupObject>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>embedded</DebugType>
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net462|AnyCPU'">
