- Keep our icon used with C# projects located with PSADT.Invoke since it's our public entry point.

--- a/src/PSADT/PSADT.ClientServer.Client/PSADT.ClientServer.Client.csproj
+++ b/src/PSADT/PSADT.ClientServer.Client/PSADT.ClientServer.Client.csproj
@@ -20,7 +20,7 @@
     <AssemblyCompany>PSAppDeployToolkit Team</AssemblyCompany>
     <AssemblyVersion>4.1.0.0</AssemblyVersion>
     <InformationalVersion>4.1.0</InformationalVersion>
-    <ApplicationIcon>Properties\appIcon.ico</ApplicationIcon>
+    <ApplicationIcon>..\..\PSADT.Invoke\PSADT.Invoke\Properties\appIcon.ico</ApplicationIcon>
     <Platforms>AnyCPU</Platforms>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
