--- a/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
+++ b/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
@@ -6,7 +6,7 @@
     <AssemblyName>Invoke-AppDeployToolkit</AssemblyName>
     <Product>PSAppDeployToolkit Deployment Script Launcher</Product>
     <Copyright>Copyright © 2025 PSAppDeployToolkit Team. All rights reserved.</Copyright>
-    <ApplicationIcon>..\..\PSADT\PSADT.ClientServer.Client\Properties\appIcon.ico</ApplicationIcon>
+    <ApplicationIcon>Properties\appIcon.ico</ApplicationIcon>
     <AssemblyTitle>PSAppDeployToolkit Deployment Script Launcher</AssemblyTitle>
     <AssemblyDescription>Launches a PSAppDeployToolkit Invoke-AppDeployToolkit.ps1 script without a PowerShell console window being visible.</AssemblyDescription>
     <AssemblyCompany>PSAppDeployToolkit Team</AssemblyCompany>
