- Add new serialisation code around Newtonsoft.Json.
Using the built-in `DataContractSerializer` is continually proving to be unreliable, requiring janky setups to skirt around its issues, including a situation where within PSADT.ClientServer.Client the `DataContractSerializer` setup couldn't even serialise its own `System.Runtime.Serialization.SerializationException`!. Newtonsoft.Json just works.

Newtonsoft.Json was chosen over System.Text.Json because it can serialise Exception types wholesale as it still properly supports the `ISerializable` interface that Exceptions use. I feel it's important to get full-fidelity serialized exceptions from the client/server client back to the server so we can accurately diagnose any reported issues. As an added bonus over the old code, we can now properly serialize interface types like `IReadOnlyList<T>`, something we use extensively within the project.

As an added bonus, the library comes pre-signed in the NuGet package so we don't have to compile our own sources here.

--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <NoWarn>$(NoWarn), SYSLIB0050</NoWarn>
+    <NoWarn>$(NoWarn)</NoWarn>
     <RootNamespace>PSADT</RootNamespace>
     <AssemblyName>PSADT</AssemblyName>
     <Product>PSAppDeployToolkit Common Support Library</Product>
@@ -62,6 +62,7 @@
     <PackageReference Include="System.Memory" Version="4.6.3" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
