Squashed 'lib/iNKORE.UI.WPF/' changes from 9a672852f..5175f7290
5175f7290 CornerRadius Extract converter
4348412eb Add CornerRadiusEx and accessories
4041a13b9 Merge branch 'main' of https://github.com/iNKORE-NET/UI.WPF
993bf2b75 Remove DirectX
2454807a5 Update README.md
f7506610b Delete iNKORE - Backup.UI.WPF.csproj
716d82a58 Update v1.2.7.1
c5b074ed7 Add something and update 1.2.7
f55a9abd6 Update version 1.2.6

git-subtree-dir: lib/iNKORE.UI.WPF
git-subtree-split: 5175f72906ce6770e98a33f91740c8120c6eda21

--- a/source/iNKORE.UI.WPF/iNKORE.UI.WPF.csproj
+++ b/source/iNKORE.UI.WPF/iNKORE.UI.WPF.csproj
@@ -6,7 +6,7 @@
 		<RootNamespace>$(MSBuildProjectName)</RootNamespace>
 		<NoWarn>1701;1702;CA1416;8618;8622;8625;MSB3539;8767;8601;8602;8604;8603;8600;CS8603;CS8618;CS8600</NoWarn>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<ApplicationIcon>..\..\assets\icons\iNKORE.ico</ApplicationIcon>
+		<ApplicationIcon>..\..\assets\icons\WpfLibrary.ico</ApplicationIcon>
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\..\assets\misc\iNKORE.Pulic.snk</AssemblyOriginatorKeyFile>
 		<SignAssembly>True</SignAssembly>
