- Wire up a new method for retrieving the user's token within `ProcessManager.LaunchAsync()`.
Hopefully such a configuration as performed here allows user interaction without the "Allow users to view and interact with the program installation".

--- a/src/PSADT/PSADT.ClientServer.Server/PSADT.ClientServer.Server.csproj
+++ b/src/PSADT/PSADT.ClientServer.Server/PSADT.ClientServer.Server.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PSADT.TokenBroker\PSADT.TokenBroker.csproj" />
     <ProjectReference Include="..\PSADT.UserInterface\PSADT.UserInterface.csproj" />
     <ProjectReference Include="..\PSADT\PSADT.csproj" />
   </ItemGroup>
