--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <InternalsVisibleTo Include="PSADT.ClientServer.Client" />
     <InternalsVisibleTo Include="PSADT.ClientServer.Server" />
+    <InternalsVisibleTo Include="PSADT.TokenBroker" />
     <InternalsVisibleTo Include="PSADT.UserInterface" />
   </ItemGroup>
 
