- Tune up how we assign `needs-triage` label to bug/feature requests.

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,7 @@
 name: "🕷️ Bug report"
 description: Report errors or unexpected behavior
-labels: [ bug, needs-triage ]
+labels: [ bug ]
+type: "Bug"
 title: "[Bug] "
 
 
@@ -20,7 +21,6 @@ body:
   id: psadt-version
   attributes:
     label: PSAppDeployToolkit version
-    placeholder: 3.10.1
     description: The version of PSAppDeployToolkit you are using
   validations:
     required: true
