--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,6 +1,7 @@
 name: 🚀 Feature Request
 description: Suggest a new feature or improvement (this does not mean you have to implement it)
-labels: ["feature-request", "needs-triage"]
+labels: [ feature-request ]
+type: "Feature"
 title: "[Feature] "
 
 body:
