--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -8,13 +8,7 @@
 name: PSAppDeployToolkit-Windows-PowerShell
 on:
   pull_request:
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
   push:
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
 permissions:
   id-token: write # Require write permission to Fetch an OIDC token.
   contents: read
@@ -27,27 +21,30 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
+
     - name: Display the path
       shell: powershell
       run: echo ${env:PATH}
+
     - name: Version Display
       shell: powershell
       run: $PSVersionTable
-    # uncomment below to explore what modules/variables/env variables are available in the build image
-    # - name: Modules and Variables Display
-    #   shell: powershell
-    #   run: Get-Module -ListAvailable; (Get-Variable).GetEnumerator() | Sort-Object Name | Out-String; (Get-ChildItem env:*).GetEnumerator() | Sort-Object Name | Out-String
+
     - name: NuGet Latest
       shell: powershell
-      run: Install-PackageProvider -Name "NuGet" -Confirm:$false -Force -Verbose
+      run: Install-PackageProvider -Name NuGet -Confirm:$false -Force -Verbose
+
     - name: PowerShellGet Latest
       shell: powershell
       run: Install-Module -Name PowerShellGet -Repository PSGallery -Force
+
     - name: Bootstrap
       shell: powershell
       run: ./actions_bootstrap.ps1
+
     - name: Install AzureSignTool
       run: dotnet tool install --global azuresigntool
+
     - name: Azure Login
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x'
       uses: azure/login@v2
@@ -55,23 +52,11 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
     - name: Test and Build
       shell: powershell
       run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
-    - name: Upload pester results
-      uses: actions/upload-artifact@v4
-      with:
-        name: pester-results
-        path: .\src\Artifacts\testOutput
-        if-no-files-found: error
-        overwrite: true
-    - name: Upload code coverage results
-      uses: actions/upload-artifact@v4
-      with:
-        name: cc-results
-        path: .\src\Artifacts\ccReport
-        if-no-files-found: error
-        overwrite: true
+
     - name: Upload module
       uses: actions/upload-artifact@v4
       with:
@@ -79,6 +64,7 @@ jobs:
         path: .\src\Artifacts\Module
         if-no-files-found: error
         overwrite: true
+
     - name: Upload v3 module template
       uses: actions/upload-artifact@v4
       with:
@@ -86,6 +72,7 @@ jobs:
         path: .\src\Artifacts\Template_v3
         if-no-files-found: error
         overwrite: true
+
     - name: Upload v4 module template
       uses: actions/upload-artifact@v4
       with:
@@ -93,6 +80,7 @@ jobs:
         path: .\src\Artifacts\Template_v4
         if-no-files-found: error
         overwrite: true
+
     - name: Update Website Docs
       if: github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/develop'
       shell: powershell
