- Properly parse the arguments within `PSADT.ClientServer.Client.Launcher` project.

--- a/src/PSADT/PSADT.ClientServer.Client.Launcher/PSADT.ClientServer.Client.Launcher.csproj
+++ b/src/PSADT/PSADT.ClientServer.Client.Launcher/PSADT.ClientServer.Client.Launcher.csproj
@@ -51,5 +51,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PSADT.ClientServer.Client\PSADT.ClientServer.Client.csproj" />
+    <ProjectReference Include="..\PSADT\PSADT.csproj" />
   </ItemGroup>
 </Project>
