- Disable all warnings and debug symbols from iNKORE.
Upstream seem reluctant to address the warnings and they make our builds look bad.

--- a/lib/iNKORE.UI.WPF.Modern/source/iNKORE.UI.WPF.Modern.Controls/iNKORE.UI.WPF.Modern.Controls.csproj
+++ b/lib/iNKORE.UI.WPF.Modern/source/iNKORE.UI.WPF.Modern.Controls/iNKORE.UI.WPF.Modern.Controls.csproj
@@ -2,6 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net8.0-windows10.0.18362.0;net472</TargetFrameworks>
+        <WarningLevel>0</WarningLevel>
+        <DebugSymbols>false</DebugSymbols>
+        <DebugType>none</DebugType>
 		<UseWPF>true</UseWPF>
 		<NeutralLanguage>en-US</NeutralLanguage>
 		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);GetDocumentationFile</TargetsForTfmSpecificBuildOutput>
